--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -5,4 +5,5 @@ zh-CN:
       omni_account/account/name:
         cash: "现金"
         rebate: "佣金"
+        manual_deposit: "人工充值"
         withdraw: "提现"
