--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,8 +7,9 @@ zh-CN:
       omni_account/account_history:
         balance: "余额"
       omni_account/account/name:
-        cash: "现金"
+        cash: "现金账户"
         ec_income: "电商收款"
+        ec_commission: "电商佣金"
         rebate: "佣金"
         manual_deposit: "人工充值"
         withdraw: "提现"
