--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -8,6 +8,7 @@ zh-CN:
         balance: "余额"
       omni_account/account/name:
         cash: "现金账户"
+        fund: "按量计费账户"
         ec_income: "电商收款"
         ec_commission: "电商佣金"
         rebate: "佣金"
