--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
         balance: "Balance"
         created_at: "Created at"
         updated_at: "Updated at"
+        holder: "Holder"
       omni_account/account_history:
         id: "ID"
         amount: "Amount"
